<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/tools"
    android:id="@+id/layout_car_model_list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_models"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/tv_car_item_image"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:transitionName="@string/transition_name_image"
                fresco:placeholderImage="@drawable/no_car"
                fresco:placeholderImageScaleType="center"
                fresco:actualImageScaleType="center"/>

            <TextView
                android:id="@+id/tv_car_item_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_car_item_image"
                android:text="Carro Teste"
                android:textSize="18sp"
                android:textStyle="bold"
                android:transitionName="@string/transition_name_model"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tv_car_item_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_car_item_model"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/tv_car_item_image"
                android:text="Fabricante Teste"
                android:textSize="12sp"
                android:textStyle="bold"
                android:transitionName="@string/transition_name_manufacturer"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tv_car_item_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/tv_car_item_model"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="STATE"
                android:textSize="12sp"

                android:transitionName="@string/transition_name_state" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:alpha="0.2"
                android:src="@drawable/arrow" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

